--- a/Introdução ao Desenvolvimento Web com JavaScript/POKEDEX/assets/css/global.css
+++ b/Introdução ao Desenvolvimento Web com JavaScript/POKEDEX/assets/css/global.css
@@ -1,9 +1,63 @@
 * {
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
 }
 .content {
     padding: 1rem;
 }
 .content h1{
     margin: 0;
+}
+
+.pokemons 
+{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+.pokemon{
+    display: flex;
+    flex-direction: column;
+    margin: .5rem;
+    padding: 2rem 1rem;
+    background-color: #49D0B0;
+    border-radius: 1rem;
+    color: #fff;
+}
+.pokemon .number
+{
+    color: #000;
+    opacity: .3;
+    text-align: right;
+}
+
+.pokemon .detail 
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.pokemon .detail .types
+{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+
+}
+.pokemon .detail .types .type
+{
+    
+    color: #fff;
+    padding: .25rem .5rem;
+    margin: .225rem 0;
+    font-size: .625rem;
+    border-radius: 1rem;
+}
+.pokemon .detail img 
+{  
+    max-width: 100%;
+    height: 70px;
 }
